[gd_scene load_steps=5 format=3 uid="uid://cl2ogx0l8sjib"]

[ext_resource type="Script" uid="uid://b3ky34d6kb7s7" path="res://root/scenes/game_scene/achievement_master/ui/achievement_hud.gd" id="achievement_hud_script"]
[ext_resource type="PackedScene" path="res://root/scenes/game_scene/achievement_master/ui/toast/toast_manager.tscn" id="toast_manager_scene"]
[ext_resource type="PackedScene" path="res://root/scenes/game_scene/achievement_master/ui/pinned/pinned_achievement_panel.tscn" id="pinned_panel_scene"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hp_fill"]
bg_color = Color(0.32280397, 0.6882976, 0.45200253, 1)

[node name="AchievementHud" type="CanvasLayer"]
layer = 10
script = ExtResource("achievement_hud_script")

[node name="PlayerStatusPanel" type="MarginContainer" parent="."]
anchors_preset = -1
anchor_right = 0.3
anchor_bottom = 0.022
offset_bottom = 80.0
grow_horizontal = 2
mouse_filter = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 8

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerStatusPanel"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 4

[node name="HpHBoxContainer" type="HBoxContainer" parent="PlayerStatusPanel/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="HpLabel" type="Label" parent="PlayerStatusPanel/VBoxContainer/HpHBoxContainer"]
layout_mode = 2
text = "HP"

[node name="HpBar" type="ProgressBar" parent="PlayerStatusPanel/VBoxContainer/HpHBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 16)
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_hp_fill")
value = 100.0

[node name="ResourceHBoxContainer" type="HBoxContainer" parent="PlayerStatusPanel/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 24

[node name="WoodLabel" type="Label" parent="PlayerStatusPanel/VBoxContainer/ResourceHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Wood: 0"

[node name="GoldLabel" type="Label" parent="PlayerStatusPanel/VBoxContainer/ResourceHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Gold: 0"

[node name="MeatLabel" type="Label" parent="PlayerStatusPanel/VBoxContainer/ResourceHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Meat: 0"

[node name="ApHBoxContainer" type="HBoxContainer" parent="PlayerStatusPanel/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="ApIconLabel" type="Label" parent="PlayerStatusPanel/VBoxContainer/ApHBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
theme_override_font_sizes/font_size = 14
text = "â˜…"

[node name="ApLabel" type="Label" parent="PlayerStatusPanel/VBoxContainer/ApHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
theme_override_font_sizes/font_size = 14
text = "AP: 0"

[node name="PinnedAchievementPanel" parent="." instance=ExtResource("pinned_panel_scene")]
unique_name_in_owner = true
anchors_preset = -1
anchor_left = 0.75
anchor_right = 1.0
anchor_bottom = 0.3
offset_top = 8.0
offset_right = -16.0

[node name="ToastManager" parent="." instance=ExtResource("toast_manager_scene")]
